// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tag mutations create tag 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "createTag": "tag Tag text was created successfully",
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`tag mutations delete tag 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "deleteTag": {
          "color": "#f0f0f0",
          "desc": "Tag description",
          "id": "deleteTagId",
          "text": "Tag text",
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`tag mutations update tag 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "updateTag": "tag Tag text was updated",
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;
